# bazelplay

./: .bazelrc  BUILD  CLAUDE.md  MODULE.bazel  README.md  WORKSPACE  everything.bazelproject  go.mod  maven_install.json
.github/workflows/: build.yml
scripts/: gazelle.sh  maven_install_pin.sh
src/go/: BUILD.bazel  main.go
src/go/foo/: BUILD.bazel  foo.go  foo_test.go
src/java/org/scode/bazelplay/: BUILD  Hello.java
src/java/org/scode/bazelplay/lib/: BUILD  Greeter.java  GreeterTest.java
src/proto/: BUILD  person.proto
src/python/scode/: BUILD  hello.py  hello_test.py
